--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>complete responsive tour and travel agency website design tutorial</title>
+    <title>Priyo tour and travel agency </title>
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
@@ -52,8 +52,6 @@
         <a href="#" class="btn">Learn more</a>
     </div>
 
- 
-
    <div class="video-container">
         <img src="images/5a790e1f550501f996ca21f4a9ebf007.jpg" id="video-slider">
     </div>
@@ -76,9 +74,9 @@
         <span>s</span>
     </h1>
 
-    <div class="swiper-container review-slidere">
+  <!--   <div class="swiper-container review-slidere">
 
-        <div class="swiper-wrappere">
+       <div class="swiper-wrappere">-->
 
             <div class="swiper-slidee">
                 <div class="boxe">
@@ -465,9 +463,7 @@
 
     <div class="box-container">
 
-       <!-- <div class="box">
-            <h3>about us</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quas magni pariatur est accusantium voluptas enim nemo facilis sit debitis.</p>
+  
         </div>-->
         <div class="box">
             <h3>branch locations</h3>
@@ -476,15 +472,7 @@
             <a href="#">Chittagong</a>
             <a href="#">Sylhet</a>
         </div>
-        <!--<div class="box">
-            <h3>quick links</h3>
-            <a href="#">home</a>
-            <a href="#">book</a>
-            <a href="#">packages</a>
-            <a href="#">services</a>
-            <a href="#">gallery</a>
-            <a href="#">review</a>
-            <a href="#">contact</a>
+       
         </div>-->
         <div class="box">
             <h3>follow us</h3>
